--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,42 @@
-.App {
-  text-align: center;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  color: #fff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.weather-app {
+  background-image: url(./assets/bg/bg.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.weather-app, #Atmosphere {
+  background-image: url(./assets/bg/atmosphere.jpg);
 }
 
-.App-header {
-  background-color: #282c34;
+.weather-app, #Clear {
+  background-image: url(./assets/bg/clear.jpg);
+}
+
+.weather-app, #Clouds {
+  background-image: url(./assets/bg/clouds.jpg);
+}
+
+.weather-app, #Drizzle {
+  background-image: url(./assets/bg/drizzle.jpg);
+}
+
+.weather-app, #Snow {
+  background-image: url(./assets/bg/snow.jpg);
+}
+
+
+.app-container {
   min-height: 100vh;
+  padding: 30px;
   display: flex;
   flex-direction: column;
+  justify-content: start;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
